k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: aniquiz
  labels:
    app.kubernetes.io/name: aniquiz
    environment: production
